<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.MovieDetailActivity">

    <ImageButton
        android:id="@+id/btnAtras"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/back"
        android:background="@null"
        app:tint="@color/filmathon_orange"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@id/tvTitulo"
        tools:text="Star Wars Episodio 5: El imperio contraataca"
        android:textAlignment="center"
        android:textSize="24sp"
        android:fontFamily="@font/quicksand_bold"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAtras"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="66dp"/>

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/poster_pelicula"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:id="@+id/svSinopsis"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scroll_thumb"
        app:layout_constraintTop_toBottomOf="@id/ivPoster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintWidth_percent="0.7">

        <TextView
            android:id="@+id/tvSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="14sp"
            android:lineSpacingExtra="4dp"
            android:padding="8dp"
            android:textColor="@color/black"/>
    </ScrollView>

    <TextView
        android:id="@+id/tvGenero"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genero_detail"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/svSinopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvResGenero"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tvResGenero"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Aventura"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/svSinopsis"
        app:layout_constraintStart_toEndOf="@id/tvGenero"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvAnyo"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anyo_datail"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/tvGenero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvResAnyo"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tvResAnyo"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1993"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/tvResGenero"
        app:layout_constraintStart_toEndOf="@id/tvAnyo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvDuracion"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duracion_detail"
        android:textAlignment="viewEnd"
        app:layout_constraintTop_toBottomOf="@id/tvAnyo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvResDuracion"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/tvResDuracion"
        android:textSize="18sp"
        android:fontFamily="@font/quicksand_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="126 min"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/tvResAnyo"
        app:layout_constraintStart_toEndOf="@id/tvDuracion"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvDondeVer"
        android:fontFamily="@font/quicksand_regular"
        android:textSize="20sp"
        android:text="@string/donde_verla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDuracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerPlataforma"
        android:background="@drawable/input_background"
        android:minHeight="48dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@+id/tvDondeVer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"/>

    <ImageView
        android:id="@+id/logoMini"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_filmathon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>